--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato|Staatliches" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="/css/mobile.css">
     <link rel="shortcut icon" type="image/x-icon" href="./favicon_io/favicon-32x32.png">
     <title>NewsGrid | Latest News</title>
 </head>
 
 <body>
-    <nav id="main-nav">
+    {{!-- <nav id="main-nav">
         <div class="container">
             <img src="img/logo.png" alt="NewsGrid" class="logo">
             <div class="social">
@@ -28,7 +28,9 @@
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
-    </nav>
+    </nav> --}}
+
+    {{>header}}
 
     <!-- Showcase -->
     <header id="showcase">
@@ -38,7 +40,7 @@
                     <div class="category category-sports">Sports</div>
                     <h1>Some Sports Article</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus rerum officia quibusdam mollitia deserunt animi soluta laudantium. Quam sapiente a dolorum magnam necessitatibus quis tempore facere totam. Dolor, sequi distinctio!</p>
-                    <a href="article.html" class="btn btn-primary">Read More</a>
+                    <a href="/article" class="btn btn-primary">Read More</a>
                 </div>
             </div>
         </div>
@@ -54,7 +56,7 @@
                     <div>
                         <div class="category category-ent">Entertainment</div>
                         <h3>
-                            <a href="article.html">Lorem ipsum dolor sit amet</a>
+                            <a href="/article">Lorem ipsum dolor sit amet</a>
                         </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
                     </div>
@@ -62,7 +64,7 @@
                 <article class="card bg-dark">
                     <div class="category category-sports">Sports</div>
                     <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet</a>
+                        <a href="/article">Lorem ipsum dolor sit amet</a>
                     </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
                 </article>
@@ -70,14 +72,14 @@
                     <img src="img/articles/tech1.jpg" alt="">
                     <div class="category category-tech">Technology</div>
                     <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet</a>
+                        <a href="/article">Lorem ipsum dolor sit amet</a>
                     </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
                 </article>
                 <article class="card">
                     <div class="category category-sports">Sports</div>
                     <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet</a>
+                        <a href="/article">Lorem ipsum dolor sit amet</a>
                     </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
                     <img src="img/articles/sports1.jpg" alt="">
@@ -86,14 +88,14 @@
                     <img src="img/articles/tech2.jpg" alt="">
                     <div class="category category-tech">Technology</div>
                     <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet</a>
+                        <a href="/article">Lorem ipsum dolor sit amet</a>
                     </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
                 </article>
                 <article class="card bg-primary">
                     <div class="category category-sports">Sports</div>
                     <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet</a>
+                        <a href="/article">Lorem ipsum dolor sit amet</a>
                     </h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
                 </article>
@@ -101,7 +103,7 @@
                     <div>
                         <div class="category category-ent">Entertainment</div>
                         <h3>
-                            <a href="article.html">Lorem ipsum dolor sit amet</a>
+                            <a href="/article">Lorem ipsum dolor sit amet</a>
                         </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam eius ducimus optio veniam sit nihil beatae ea autem. Doloribus.</p>
                     </div>
