Footer Partial Added

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -8,8 +8,8 @@
             <a href="http://youtube.com" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
         </div>
         <ul>
-            <li><a class={{homeClass}} href="/">Home</a></li>
-            <li><a class={{aboutClass}} href="/about">About</a></li>
+            <li><a class="{{homeClass}}" href="/">Home</a></li>
+            <li><a class="{{aboutClass}}" href="/about">About</a></li>
         </ul>
     </div>
 </nav>
