--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,21 +14,6 @@
 </head>
 
 <body>
-    {{!-- <nav id="main-nav">
-        <div class="container">
-            <img src="img/logo.png" alt="NewsGrid" class="logo">
-            <div class="social">
-                <a href="http://facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="http://twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="http://instagram.com" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="http://youtube.com" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
-            </div>
-            <ul>
-                <li><a class="current" href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </div>
-    </nav> --}}
 
     {{>header}}
 
@@ -113,43 +98,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer id="main-footer" class="py-2">
-        <div class="container footer-container">
-            <div>
-                <img src="img/logo_light.png" alt="NewsGrid">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit deserunt assumenda enim non? Ratione ipsum voluptates fuga eos earum vitae.</p>
-            </div>
-            <div>
-                <h3>Email Newsletter</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <form>
-                    <input type="email" placeholder="Enter Email...">
-                    <input type="submit" value="Subscribe" class="btn btn-primary">
-                </form>
-            </div>
-            <div>
-                <h3>Site Links</h3>
-                <ul class="list">
-                    <li><a href="#">Help & Support</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>Join Our Club</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nesciunt!</p>
-                <a href="#" class="btn btn-secondary">Join Now</a>
-            </div>
-            <div>
-                <p>
-                    Copyright &copy; 2019, All Rights Reserved
-                </p>
-            </div>
-        </div>
-    </footer>
-
+   {{>footer}}
 </body>
 
 </html>
